Question 2 completed (might modify)

--- a/finding_donors/finding_donors.ipynb
+++ b/finding_donors/finding_donors.ipynb
@@ -1301,21 +1301,37 @@
         "\n",
         "\n",
         "\n",
-        "1.   Decision Trees\n",
+        "1.   Decision Trees ()\n",
+        " *   Real-World Application: Business management, customer relationship management, fault diagnosis. [applications](https://medium.com/@MrBam44/decision-trees-91f61a42c724#:~:text=Business%20Management,Fault%20Diagnosis)\n",
+        "\n",
+        "  *   Advantages: Decision trees can handle large datasets in a short amount of time [Advantage 1](https://www.sciencedirect.com/topics/computer-science/decision-tree-classifier), not to mention that it is robust to outliers and can handle complex datasets effeciently [Advantage 2](https://insidelearningmachines.com/advantages_and_disadvantages_of_decision_trees/)\n",
+        "  *   Disadvantages: while it sounds too good for a model to perform well for large and complex datasets in a short amount of time, the main disadvantage for this model is that it is prone to overfitting [Disadvantage 1](https://www.sciencedirect.com/science/article/pii/S0010482522004280#:~:text=However%2C%20this%20algorithm%20is%20prone%20to%20overfitting%2C%20and%20for%20data%20with%20inconsistent%20numbers%20of%20samples%20in%20each%20category%2C%20the%20information%20gain%20is%20biased%20towards%20those%20with%20a%20larger%20number%20of%20samples) this could be solved if we try the Random Forest algorithm\n",
+        "  *   Why is could this model be good for this project?\n",
+        "      this model can handle mixed data types and it captures non linear relationships. and since our data has a certian level of outliers and is imbalanced, DT would be a good candidate, or using it in Random Forests could also be a good idea.\n",
+        "      \n",
         "\n",
         "2.   AdaBoosting\n",
         "\n",
-        "  *   Real-Worls Application:\n",
-        "  *   Advantages:\n",
+        "  *   Real-Worls Application: computer vision, NLP and bioinfromatics [Applications 1](https://dataaspirant.com/adaboost-algorithm/#:~:text=It%20has%20been%20successfully%20applied%20in%20various%20fields%2C%20such%20as%20computer%20vision%2C%20natural%20language%20processing%2C%20and%20bioinformatics.)\n",
+        "  *   Advantages: Adaboost is really great when it comes to avoiding overfitting the model, it is also good for complex datasets and hard-to-classify entries by adapting to the data each iteration. Another advantage is that it requires less need for adjusting parameters.[Advantage 1](https://www.digitalocean.com/community/tutorials/adaboost-optimizer#:~:text=AdaBoost%20has%20a,this%20link.) [Advantage 2](https://medium.com/@datasciencewizards/understanding-the-adaboost-algorithm-2e9344d83d9b#:~:text=logistic%20regression%20model.-,Advantages%20and%20Disadvantages%20of%20AdaBoost,can%20use%20it.%20Let%E2%80%99s%20take%20a%20look%20at%20the%20below%20table.,-Final%20Words)\n",
         "  *   Disadvantages:\n",
-        "        while adaboosting can be great for avoiding overfitting and classifying imbalanced classes, the algorithm can not be parallelized since each predictor depends on the outcome of the one before it [Disadvantage 1](https://www.sciencedirect.com/topics/engineering/adaboost#:~:text=AdaBoost%20adds%20learners%20to%20the%20ensemble%2C%20iteratively%20making%20it%20better.%20This%20algorithm%E2%80%99s%20significant%20disadvantage%20is%20that%20the%20model%20cannot%20be%20parallelized%20since%20each%20predictor%20can%20only%20be%20trained%20after%20the%20previous%20one%20has%20been%20trained%20and%20assessed%20(Chengsheng%2C%20Huacheng%2C%20%26%20Bing%2C%202017).) also, Adaboost is extremley sensitive to outliers and they should be delt with as we did in this project by scaling and normalizing the data [Disadvantage 2](https://www.digitalocean.com/community/tutorials/adaboost-optimizer#:~:text=A%20few%20Disadvantages,to%20eliminate%20them.)\n",
+        "        while adaboosting can be great for avoiding overfitting and classifying imbalanced classes, the algorithm can not be parallelized since each predictor depends on the outcome of the one before it [Disadvantage 1](https://www.sciencedirect.com/topics/engineering/adaboost#:~:text=AdaBoost%20adds%20learners%20to%20the%20ensemble%2C%20iteratively%20making%20it%20better.%20This%20algorithm%E2%80%99s%20significant%20disadvantage%20is%20that%20the%20model%20cannot%20be%20parallelized%20since%20each%20predictor%20can%20only%20be%20trained%20after%20the%20previous%20one%20has%20been%20trained%20and%20assessed%20(Chengsheng%2C%20Huacheng%2C%20%26%20Bing%2C%202017). also, Adaboost is extremley sensitive to outliers and they should be delt with as we did in this project by scaling and normalizing the data [Disadvantage 2](https://www.digitalocean.com/community/tutorials/adaboost-optimizer#:~:text=A%20few%20Disadvantages,to%20eliminate%20them.)\n",
         "  *   Why is this model good for this project?\n",
+        "        since CharityML focuses on true high income donors, Adaboost can be useful for hard-to-predict cases and classifications without overfitting, resulting in a precise model for the project. It is also easier to work with since it need less tweaking of parameters to work with, note that one disadvantage of this model was sensitivity to outliers, we have delt with this by normalizing and scaling previously.\n",
+        "         \n",
         "\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "3.   Logistic Regression\n",
+        "3.   Gaussian Naive Bayes\n",
+        "\n",
+        "  *   Real-Worls Application: it can be used for a wide range of applications, such as document classification, spam filtering as studied earlier in this course, and sentiment analysis\n",
+        "  *   Advantages: Gaussian Naive Bayes can deal with both continuous and discrete data, it is also known for its simplicity and fast computation time, not to mention that it is great for multidimentional data. [Advantage 1](https://www.kaggle.com/discussions/getting-started/225022#:~:text=The%20following%20are,to%20irrelevant%20features) [Advantage 2](https://medium.com/@kashishdafe0410/gaussian-naive-bayes-understanding-the-basics-and-applications-52098087b963#:~:text=3.%20Advantages%20of%20Gaussian%20Naive%20Bayes)\n",
+        "  *   Disadvantages: the Gaussian Naive Bayes assumes normally distributed features, on top of that it is sensitive to outliers and imbalanced datasets [Disadvantage 1](https://medium.com/@kashishdafe0410/gaussian-naive-bayes-understanding-the-basics-and-applications-52098087b963#:~:text=Independence%20Assumption%3A,outnumbers%20the%20others.) also, it assumes that features are independent which could be a problem for our project since some features could have some correlations\n",
+        "  *   Why is could this model be good for this project? while the model assumes normal distribution and our data is not exactly that, it is still worth trying for its simplicity and fast computation time, also the fact that it works well for a large number of features unlike logistic regression that is prone to overfit for large datasets.\n",
+        "\n",
+        "         \n",
         "\n",
         "\n",
         "\n"
@@ -1341,7 +1357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "collapsed": true,
         "id": "iO8FOt1zlI49"
@@ -1349,7 +1365,8 @@
       "outputs": [],
       "source": [
         "# TODO: Import two metrics from sklearn - fbeta_score and accuracy_score\n",
-        "\n",
+        "import time\n",
+        "from sklearn.metrics import fbeta_score, accuracy_score\n",
         "def train_predict(learner, sample_size, X_train, y_train, X_test, y_test):\n",
         "    '''\n",
         "    inputs:\n",
@@ -1365,33 +1382,33 @@
         "\n",
         "    # TODO: Fit the learner to the training data using slicing with 'sample_size' using .fit(training_features[:], training_labels[:])\n",
         "    start = time() # Get start time\n",
-        "    learner = None\n",
+        "    learner = learner.fit(X_train[:sample_size], y_train[:sample_size])\n",
         "    end = time() # Get end time\n",
         "\n",
         "    # TODO: Calculate the training time\n",
-        "    results['train_time'] = None\n",
+        "    results['train_time'] = end - start\n",
         "\n",
         "    # TODO: Get the predictions on the test set(X_test),\n",
         "    #       then get predictions on the first 300 training samples(X_train) using .predict()\n",
         "    start = time() # Get start time\n",
-        "    predictions_test = None\n",
-        "    predictions_train = None\n",
+        "    predictions_test = learner.predict(X_test)\n",
+        "    predictions_train = learner.predict(X_train[:300])\n",
         "    end = time() # Get end time\n",
         "\n",
         "    # TODO: Calculate the total prediction time\n",
-        "    results['pred_time'] = None\n",
+        "    results['pred_time'] = end - start\n",
         "\n",
         "    # TODO: Compute accuracy on the first 300 training samples which is y_train[:300]\n",
-        "    results['acc_train'] = None\n",
+        "    results['acc_train'] = accuracy_score(y_train[:300], predictions_train)\n",
         "\n",
         "    # TODO: Compute accuracy on test set using accuracy_score()\n",
-        "    results['acc_test'] = None\n",
+        "    results['acc_test'] = accuracy_score(y_test, predictions_test)\n",
         "\n",
         "    # TODO: Compute F-score on the the first 300 training samples using fbeta_score()\n",
-        "    results['f_train'] = None\n",
+        "    results['f_train'] = fbeta_score(y_train[:300], predictions_train, beta = 0.5)\n",
         "\n",
         "    # TODO: Compute F-score on the test set which is y_test\n",
-        "    results['f_test'] = None\n",
+        "    results['f_test'] = fbeta_score(y_test, predictions_test, beta = 0.5)\n",
         "\n",
         "    # Success\n",
         "    print(\"{} trained on {} samples.\".format(learner.__class__.__name__, sample_size))\n",
@@ -1428,11 +1445,12 @@
       "outputs": [],
       "source": [
         "# TODO: Import the three supervised learning models from sklearn\n",
-        "\n",
+        "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
         "# TODO: Initialize the three models\n",
-        "clf_A = None\n",
-        "clf_B = None\n",
-        "clf_C = None\n",
+        "clf_A = RandomForestClassifier()\n",
+        "clf_B = AdaBoostClassifier()\n",
+        "clf_C = GaussianNB()\n",
         "\n",
         "# TODO: Calculate the number of samples for 1%, 10%, and 100% of the training data\n",
         "# HINT: samples_100 is the entire training set i.e. len(y_train)\n",
